manifests/backend.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    contains: backend


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-backend
  namespace: backend
  labels: 
    app: backend
    language: python
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: application/backend:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: backend
spec:
  selector:
    app: backend
  # clusterIP: None
  ports:
  - port: 5000
    # name: flask
    targetPort: 5000
